Something of substance! Major improvements coming sometime.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
   <title>Eland</title>
   <meta name="description" content="Eland's user page">
   <meta name="author" content="eland">
+  <link href='http://fonts.googleapis.com/css?family=Tauri' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
 </head>
 
 <body>
+  <div class="main">
+    <h1>Eland, <span class="aka">aka</span> <span class="name">Matthew Danskey</name></h1>
+    <div class="content-block">
+      <p>
+        What is an eland? It's a species of antelope. Now that the burning question of your lives is out of the way, we can move on to what you really came here for.
+      </p>
+      <p>
+      I'm a ruby developer (mainly Rails, both 3 and 4, sometimes on JRuby) that has also done some JavaScript MVC work with ChaplinJS. I graduated from the Portland Code School late last year and have been doing contract work at a local company ever since. I'm looking for my next step: a company that has challenging work, a collaborative atmosphere, and big bonus points if it's trying to make the world a better place!
+      </p>
+      <p>
+      I try to stay balanced. I play instruments such as a simple-system flute and erhu; generally go and be social; code on the side here and there; and sometimes think about life rather deeply.
+      </p>
+      <p>
+      Unfortunately, most of my contributions of the past several months are in private repositories. I'm working on showcasing what I can do with the determined-mountain-goat project, and the clojure-luminus project shows some things I'm curious about. Everything else is either from the teaching phase of the Code School or before it. If you want to know if I can do X, send me a project to code! I enjoy challenges like that.
+      </p>
+    </div>
+  </div>
 </body>
 
 </html>
