Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,49 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta-charset="utf-8">
-  <title>Eland</title>
-  <meta name="description" content="Eland's user page">
-  <meta name="author" content="eland">
-  <link href='http://fonts.googleapis.com/css?family=Tauri' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Matthew Danskey by eland</title>
 
-<body>
-  <div class="main">
-    <h1>Eland, <span class="aka">aka</span> <span class="name">Matthew Danskey</name></h1>
-    <div class="content-block">
-      <p>
-        What is an eland? It's a species of antelope. Now that the burning question of your lives is out of the way, we can move on to what you really came here for.
-      </p>
-      <p>
-      I'm a ruby developer (mainly Rails, both 3 and 4, sometimes on JRuby) that has also done some JavaScript MVC work with ChaplinJS. I graduated from the Portland Code School late last year and have been doing contract work at a local company ever since. I'm looking for my next step: a company that has challenging work, a collaborative atmosphere, and big bonus points if it's trying to make the world a better place!
-      </p>
-      <p>
-      I try to stay balanced. I play instruments such as a simple-system flute and erhu; generally go and be social; code on the side here and there; and sometimes think about life rather deeply.
-      </p>
-      <p>
-      Unfortunately, most of my contributions of the past several months are in private repositories. I'm working on showcasing what I can do with the determined-mountain-goat project, and the clojure-luminus project shows some things I'm curious about. Everything else is either from the teaching phase of the Code School or before it. If you want to know if I can do X, send me a project to code! I enjoy challenges like that.
-      </p>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Matthew Danskey</h1>
+        <p class="header">Coding and living.</p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/eland">GitHub Profile</a></li>
+        </ul>
+
+      </header>
+      <section>
+        <h3>Welcome to my GitHub Page.</h3>
+
+<p>Very shortly, this will be home to a portfolio of what I've done and what I'm currently working on -- as well as a blog.</p>
+
+<h3>Who I am</h3>
+
+<p>I'm a burgeoning programmer from the very first class of the Portland Code School. I've been doing contract work ever since for a local company, and I am in the market for a job that challenges me, recognizes that there's more to life than coding (even though coding is nifty) and a balance is to be had, and hopefully that wants to make the world a better place.</p>
+
+<h3>Portfolio (with screenshots)</h3>
+
+<p>Coming soon.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
-  </div>
-</body>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
+  </body>
 </html>
