Update resume, some content

--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,7 @@
    <img src="/images/dmg.png">
    <p>The picture is from the scrapped Rails 3 version. I'm currently writing a python API with Flask that will communicate with an AngularJS frontend.</p>
    <p>It's meant to track one or several actvities over a long period of time, and then give visualizations, metrics, and potentially inferential statistics on the data. It might be helpful for tracking progress or seeing if there's a pattern that leads to a long break.</p>
+   <p>You can find the current iteration's api <a href="http://github.com/eland/dmg-api.git">here</a></p>
 
   </section>
   <footer>
