--- a/index.html
+++ b/index.html
@@ -3,22 +3,38 @@ title: index
 layout: default
 ---
 <section>
-    <h3>What I'm looking for</h3>
+    <h3>On the market!</h3>
+    <p>
+    I'm a burgeoning programmer from the very first class of an internship program that is now the Portland Code School. I just finished up some contract work for a local company. I am in the market for a position that challenges me and has a notion of work-life balance so I can be sustainably awesome. A collaborative work environment is a major plus.
+    </p>
 
-    <p>I'm a burgeoning programmer from the very first class of the Portland Code School. I just finished up some contract work for a local company. I am in the market for a job that challenges me, provides opportunity for growth, and recognizes that even though coding is fascinating and I love it, there's a balance to be had in life. Making the world a better place is also a plus.</p>
+    <p>
+    My technical background extends before the internship: I've been using GNU/Linux for at least eight years now, have minors in math and computer science, and worked in management for a software development / technical support organization that solely employed college students.
+    </p>
 
-    <h3>My Experience</h3>
+    <h3>A little about me</h3>
+    <p>
+    I'm an amicable fellow -- sometimes silly, but I like getting things done. I am rather in love with classical music and own and play several instruments. I like dubstep now and then, too. I was an assertiveness skills trainer for a couple of years while getting my B.A. in psychology. More and more, I find myself identifying with the sentiment, "There is no such thing as talent without hard work".
+    </p>
 
-    <p>I've worked mainly in application-level Javascript (mainly ChaplinJS) as well as back-end programming in Rails. I'm interested in both back-end programming and Javascript frameworks, and <em>I learn whatever's thrown at me incredibly quickly.</em></p>
+    <h3>Currently working on:</h3>
+    <p>
+    I'm working on an AngularJS application codenamed Determined Mountain Goat. The aim is to be able to record when and how long one does an activity (running, coding, etc) and then visualize that data. Inferential statistics might make their way into it as well.
+    </p
 
-    <h3>Currently Working on:</h3>
-    <p>I'm working on an AngularJS application codenamed Determined Mountain Goat. The aim is to be able to record when and how long one does an activity (running, coding, etc) and then visualize that data. Inferential statistics might make their way into it as well.</p>
-    <p>The backend API is close to complete enough to start on the frontend. I've chosen to write the API in Python with Flask and MongoDB, as inspired by <a href="https://speakerdeck.com/nicola/developing-restful-web-apis-with-python-flask-and-mongodb">these slides by Nicolai Iarocci</a>. I'm finding it super slick.</p>
+    <p>
+    The back end API is complete enough to start on the front end (though 'production ready' it isn't). I've chosen to write the API in Python with Flask and MongoDB as inspired by <a href="https://speakerdeck.com/nicola/developing-restful-web-apis-with-python-flask-and-mongodb">these slides by Nicolai Iarocci</a>. I'm finding it super slick, but I think I'll stick to Ruby and Sinatra/Rails in the future since that is where my experience lies.
+    </p>
 
-    <p>Check out my progress on the API <a href="https://github.com/eland/dmg-api">right over here</a>.</p>
+    <p>
+    Check out my progress on the API <a href="https://github.com/eland/dmg-api">right over here</a>.
+    </p>
 
-    <h3>My latest blog posts:</h3>
+    <p>
+    As I'm deepening my general Ruby and JavaScript skills, it may take a little bit for the front end to satisfactorily materialize. It's likely you'll see an entirely Rails implementation complete with full tests before I make a JavaScript client.
+    </p>
+
+    <h3>My latest blog post:</h3>
     <a href={{ site.posts.last.url }}>{{ site.posts.last.title }}</a>
-
 
 </section>
